css/resume-rwd.css
@media only screen and (max-width: 1080px) and (-webkit-min-device-pixel-ratio: 2) {
  .container {
    width: 95vw;
  }

  .banner {
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-template-areas:
      'name name name .'
      /* '. . . .' */
      '. . contact contact';
  }

  .contact {
    margin-top: auto;
    margin-left: auto;
  }
}

@media only screen and (max-width: 992px) and (-webkit-min-device-pixel-ratio: 2) {
  .container {
    width: 95vw;
    grid-template-columns: 1fr;
    grid-auto-rows: auto;
    grid-template-areas:
      'banner'
      'title-1'
      'content-1'
      'title-2'
      'content-2'
      'title-3'
      'content-3'
      'title-4'
      'content-4'
      'title-5'
      'content-5'
      'footer';
    gap: 1rem;
  }

  /* .project-container {
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;
  } */

  .banner {
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(3, 1fr);
    grid-template-areas:
      'name name name . '
      '. . . .'
      '. .  contact contact';
  }

  .locale-menu {
    display: none;
  }

  .locale-menu-mobile {
    display: block;
  }

  .skill {
    grid-template-columns: repeat(6, 1fr);
  }
}

@media only screen and (max-width: 768px) and (-webkit-min-device-pixel-ratio: 2) {
  .container {
    width: 95vw;
  }

  /* .project-container {
    grid-template-columns: repeat(2, 1fr);
    gap: 1rem;
  } */

  .banner {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(2, 1fr);
    grid-template-areas:
      'name'
      'contact';
    gap: 0;
    padding: 0.5rem;
  }

  .skill {
    grid-template-columns: repeat(5, 1fr);
  }
}

@media only screen and (max-width: 576px) and (-webkit-min-device-pixel-ratio: 2) {
  /* @media only screen and (-webkit-min-device-pixel-ratio: 3),
  only screen and (-moz-min-device-pixel-ratio: 3),
  only screen and (-o-min-device-pixel-ratio: 3/1),
  only screen and (min-device-pixel-ratio: 3),
  only screen and (min-resolution: 458dpi),
  only screen and (min-resolution: 3dppx) { */
  .container {
    width: auto;
  }

  .project-container {
    grid-template-columns: 1fr;
    /* grid-auto-rows: auto; */
    gap: 1rem;
  }

  .banner {
    grid-template-columns: repeat(1, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-template-areas:
      'name'
      'contact';
    gap: 0;
    padding: 0.2rem;
  }
  .name-plate {
    text-align: center;
  }

  .skill {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media only screen and (max-width: 375px) and (-webkit-min-device-pixel-ratio: 1) {
  body {
    font-size: 18px;
  }

  .container {
    width: 100%;
  }

  .banner-title {
    font-size: 2rem;
    line-height: 2rem;
  }

  .title {
    font-size: 2rem;
  }

  .contact {
    margin: auto auto 0 auto;
    /* font-size: 1rem; */
  }

  .locale-icon-mobile {
    /* width: 100%; */
    width: 24.6rem;
    height: 3rem;
    text-align: left;
    padding-left: 1rem;
  }

  .locale-item-mobile {
    width: 100%;
    margin: 0 auto;
    padding: 1rem 0 1rem 0;
    /* height: 3rem; */
  }

  .locale-icon-mobile {
    display: flex;
    padding: 0;
    line-height: 3rem;
  }

  .open-btn {
    align-self: center;
    padding-left: 1rem;
  }

  .navbar-mail-mobile {
    display: block;
    align-self: center;
    padding-right: 1rem;
    padding-top: 1rem;
  }

  .navbar-title-mobile {
    display: block;
    flex-grow: 1;
    text-align: center;
  }

  .container {
    top: 1.3rem;
  }

  .skill {
    grid-template-columns: repeat(2, 1fr);
  }

  .content-5 {
    grid-template-columns: 1fr;
    font-size: 24px;
  }

  .lang-list,
  .lang-level {
    width: 9.25rem;
    font-size: 1rem;
  }

  .cert-header {
    margin-top: 2rem;
  }

  .cert-title {
    font-size: 1rem;
  }

  .blinking-cursor {
    font-size: 2rem;
  }
  
  .printBlock {
    display: none;
  }
}

